--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
         src="img/dirga1.jpg"
         alt="Dirga Febriyanda"
         width="200"
-        class="rounded-circle img-thumbnail"
+        class="rounded-circle img-thumbnail shadow-sm"
       />
-      <h1 class="display-4"></h1>
-      <p class="lead"></p>
+      <h1 class="display-4 fw-bold text-shadow"></h1>
+      <p class="lead fw-bold text-shadow"></p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#eeeeee"
@@ -94,7 +94,7 @@
       <div class="container">
         <div class="row text-center mb-3">
           <div class="col">
-            <h2>About me</h2>
+            <h2 class="text-shadow">About me</h2>
           </div>
         </div>
         <div
@@ -134,7 +134,7 @@
       <div class="container">
         <div class="row text-center mb-3">
           <div class="col">
-            <h2>Project</h2>
+            <h2 class="text-shadow">Project</h2>
           </div>
         </div>
         <div class="row justify-content-center" style="overflow: hidden">
@@ -146,7 +146,7 @@
                 alt="project1"
               />
               <div class="card-body text-center">
-                <p>Copywriter</p>
+                <p class="text-shadow">Copywriter</p>
               </div>
             </div>
           </div>
@@ -158,7 +158,7 @@
                 alt="project2"
               />
               <div class="card-body text-center">
-                <p>Programer</p>
+                <p class="text-shadow">Programer</p>
               </div>
             </div>
           </div>
@@ -170,7 +170,7 @@
                 alt="project3"
               />
               <div class="card-body text-center">
-                <p>Graphic Design</p>
+                <p class="text-shadow">Graphic Design</p>
               </div>
             </div>
           </div>
@@ -191,78 +191,78 @@
       <div class="container-fluid">
         <div class="row text-center mb-3">
           <div class="col">
-            <h2>Gallery</h2>
+            <h2 class="text-shadow">Gallery</h2>
           </div>
         </div>
         <div class="row justify-content-center" style="overflow: hidden">
           <div class="col-md-3" data-aos="zoom-in">
-            <a href="#">
+            <a href="img/gambar/1.jpg">
               <img
                 src="img/gambar/1.jpg"
-                alt="Gambar 1"
+                alt="Hutan Kenangan"
                 class="img-fluid galeri-img"
               />
             </a>
           </div>
           <div class="col-md-3" data-aos="zoom-in">
-            <a href="#">
+            <a href="img/gambar/2.jpg">
               <img
                 src="img/gambar/2.jpg"
-                alt="Gambar 2"
+                alt="Pohon Harapan"
                 class="img-fluid galeri-img"
               />
             </a>
           </div>
           <div class="col-md-3" data-aos="zoom-in">
-            <a href="#">
+            <a href="img/gambar/3.jpg">
               <img
                 src="img/gambar/3.jpg"
-                alt="Gambar 3"
+                alt="Pantai Kebahagiaan"
                 class="img-fluid galeri-img"
               />
             </a>
           </div>
           <div class="col-md-3" data-aos="zoom-in">
-            <a href="#">
+            <a href="img/gambar/4.jpg">
               <img
                 src="img/gambar/4.jpg"
-                alt="Gambar 4"
+                alt="Pemandangan Suram"
                 class="img-fluid galeri-img"
               />
             </a>
           </div>
           <div class="col-md-3" data-aos="zoom-in">
-            <a href="#">
+            <a href="img/gambar/5.jpg">
               <img
                 src="img/gambar/5.jpg"
-                alt="Gambar 5"
+                alt="Bulan Kelahiran"
                 class="img-fluid galeri-img"
               />
             </a>
           </div>
           <div class="col-md-3" data-aos="zoom-in">
-            <a href="#">
+            <a href="img/gambar/6.jpg">
               <img
                 src="img/gambar/6.jpg"
-                alt="Gambar 6"
+                alt="Bukit Mantan"
                 class="img-fluid galeri-img"
               />
             </a>
           </div>
           <div class="col-md-3" data-aos="zoom-in">
-            <a href="#">
+            <a href="img/gambar/7.jpg">
               <img
                 src="img/gambar/7.jpg"
-                alt="Gambar 7"
+                alt="Bambu Kesakitan"
                 class="img-fluid galeri-img"
               />
             </a>
           </div>
           <div class="col-md-3" data-aos="zoom-in">
-            <a href="#">
+            <a href="img/gambar/8.jpg">
               <img
                 src="img/gambar/8.jpg"
-                alt="Gambar 8"
+                alt="Jurang Kesulitan"
                 class="img-fluid galeri-img"
               />
             </a>
@@ -284,7 +284,7 @@
       <div class="container">
         <div class="row text-center mb-3">
           <div class="col">
-            <h2>Contact</h2>
+            <h2 class="text-shadow">Contact</h2>
           </div>
         </div>
         <div class="row justify-content-center mb-3">
@@ -371,7 +371,7 @@
           class="mb-3 me-2 mb-md-0 text-white text-decoration-none lh-1"
         >
         </a>
-        <span class="text-light fw-bold"
+        <span class="text-light fw-bold text-shadow"
           >Copyright &copy; 2022 A.N.JELL <sup>TM</sup></span
         >
       </div>
@@ -379,7 +379,7 @@
       <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
         <li class="ms-3">
           <a
-            class="fab fa-twitter text-light navbar-brand"
+            class="fab fa-twitter text-info navbar-brand"
             href="https://www.twitter.com/anjell_1202"
           ></a>
         </li>
@@ -391,7 +391,7 @@
         </li>
         <li class="ms-3">
           <a
-            class="fab fa-facebook text-light navbar-brand"
+            class="fab fa-facebook text-primary navbar-brand"
             href="https://www.facebook.com/dirga.febriyanda/"
           ></a>
         </li>
