--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         src="img/dirga1.jpg"
         alt="Dirga Febriyanda"
         width="200"
-        class="rounded-circle img-thumbnail shadow-sm"
+        class="rounded-circle img-thumbnail shadow-sm bg-dark"
       />
       <h1 class="display-4 fw-bold text-shadow"></h1>
       <p class="lead fw-bold text-shadow"></p>
@@ -91,7 +91,7 @@
 
     <!-- Tentang -->
     <section id="tentang">
-      <div class="container">
+      <div class="container-fluid">
         <div class="row text-center mb-3">
           <div class="col">
             <h2 class="text-shadow">About me</h2>
