--- a/index.html
+++ b/index.html
@@ -103,18 +103,16 @@
         >
           <div class="col-md-4" data-aos="fade-right">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente,
-              error, dignissimos reprehenderit voluptas recusandae suscipit,
-              eligendi dolore eius quos eos deserunt vero esse beatae?
-              Similique?
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Consectetur suscipit fugiat ipsam sed culpa beatae velit
+              perspiciatis. Ut, alias vero!
             </p>
           </div>
           <div class="col-md-4" data-aos="fade-left">
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Distinctio iusto sapiente porro ab, rerum modi illo ut eaque
-              voluptate autem odit reprehenderit optio veniam iure quisquam
-              reiciendis placeat ex. Nesciunt?
+              Reprehenderit animi repellendus repudiandae quis sunt. At
+              praesentium dolores esse autem dicta?
             </p>
           </div>
         </div>
