--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
         >
           <div class="col-md-4" data-aos="fade-right">
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Consectetur suscipit fugiat ipsam sed culpa beatae velit
-              perspiciatis. Ut, alias vero!
+              Hallo, Selamat datang di portofolio saya, perkenalkan saya Dirga Febriyanda biasa di panggil Dirga. saya bekerja di bidang IT yaitu dalam  pengembangan website, desain grafis dan juga copywriter.
+
+              Saya orangnya kreatif, bertanggung jawab, punya rasa penasaran yang tinggi, suka belajar hal-hal baru dan perfeksionis.
             </p>
           </div>
           <div class="col-md-4" data-aos="fade-left">
