--- a/index.html
+++ b/index.html
@@ -132,10 +132,7 @@
       <section class="skills" id="skills">
         <div class="s-text">
           <h4>Current Skills Level</h4>
-          <h2>
-            Laying the Foundation for <br />
-            the Future
-          </h2>
+          <h2>Laying the Foundation <br />for the Future</h2>
         </div>
         <div class="skill-set">
           <div class="skill-item">
