--- a/index.html
+++ b/index.html
@@ -69,21 +69,21 @@
           ></a> -->
 
           <a
-            href="https://www.facebook.com/your-profile"
+            href="https://www.facebook.com/dirga.febriyanda"
             target="_blank"
             class="h-social-media"
           >
             <i class="fab fa-facebook"></i>
           </a>
           <a
-            href="https://www.instagram.com/your-profile"
+            href="https://www.instagram.com/dirgafebriyanda"
             target="_blank"
             class="h-social-media"
           >
             <i class="fab fa-instagram"></i>
           </a>
           <a
-            href="https://github.com/your-profile"
+            href="https://github.com/dirgafebriyanda"
             target="_blank"
             class="h-social-media"
           >
