--- a/index.html
+++ b/index.html
@@ -108,8 +108,6 @@
         </div>
       </section>
 
-      <img src="assets/img/wave/wave-hero.png" style="width: 100%" alt="" />
-
       <!-- about -->
       <section class="about" id="about" style="overflow: hidden">
         <div class="about-img" data-aos="flip-left">
@@ -210,18 +208,23 @@
                 <div class="swiper-wrapper">
                   <img
                     class="swiper-slide"
-                    src="assets/img/project/1.png"
+                    src="assets/img/project/b1.png"
                     alt="img 1"
                   />
                   <img
                     class="swiper-slide"
-                    src="assets/img/project/2.png"
+                    src="assets/img/project/b2.png"
                     alt="img 2"
                   />
                   <img
                     class="swiper-slide"
-                    src="assets/img/project/3.png"
+                    src="assets/img/project/b3.png"
                     alt="img 3"
+                  />
+                  <img
+                    class="swiper-slide"
+                    src="assets/img/project/b4.png"
+                    alt="img 4"
                   />
                 </div>
               </div>
@@ -231,17 +234,32 @@
                 <div class="swiper-wrapper">
                   <img
                     class="swiper-slide"
-                    src="assets/img/project/1.png"
+                    src="assets/img/project/e1.png"
                     alt="img 1"
                   />
                   <img
                     class="swiper-slide"
-                    src="assets/img/project/2.png"
+                    src="assets/img/project/e2.png"
                     alt="img 2"
                   />
                   <img
                     class="swiper-slide"
-                    src="assets/img/project/3.png"
+                    src="assets/img/project/e3.png"
+                    alt="img 3"
+                  />
+                  <img
+                    class="swiper-slide"
+                    src="assets/img/project/e4.png"
+                    alt="img 3"
+                  />
+                  <img
+                    class="swiper-slide"
+                    src="assets/img/project/e5.png"
+                    alt="img 3"
+                  />
+                  <img
+                    class="swiper-slide"
+                    src="assets/img/project/e6.png"
                     alt="img 3"
                   />
                 </div>
@@ -252,17 +270,22 @@
                 <div class="swiper-wrapper">
                   <img
                     class="swiper-slide"
-                    src="assets/img/project/1.png"
+                    src="assets/img/project/s1.png"
                     alt="img 1"
                   />
                   <img
                     class="swiper-slide"
-                    src="assets/img/project/2.png"
+                    src="assets/img/project/s3.png"
                     alt="img 2"
                   />
                   <img
                     class="swiper-slide"
-                    src="assets/img/project/3.png"
+                    src="assets/img/project/s4.png"
+                    alt="img 3"
+                  />
+                  <img
+                    class="swiper-slide"
+                    src="assets/img/project/s2.png"
                     alt="img 3"
                   />
                 </div>
@@ -273,17 +296,32 @@
                 <div class="swiper-wrapper">
                   <img
                     class="swiper-slide"
-                    src="assets/img/project/1.png"
+                    src="assets/img/project/l1.png"
                     alt="img 1"
                   />
                   <img
                     class="swiper-slide"
-                    src="assets/img/project/2.png"
+                    src="assets/img/project/l2.png"
                     alt="img 2"
                   />
                   <img
                     class="swiper-slide"
-                    src="assets/img/project/3.png"
+                    src="assets/img/project/l3.png"
+                    alt="img 3"
+                  />
+                  <img
+                    class="swiper-slide"
+                    src="assets/img/project/l4.png"
+                    alt="img 3"
+                  />
+                  <img
+                    class="swiper-slide"
+                    src="assets/img/project/l5.png"
+                    alt="img 3"
+                  />
+                  <img
+                    class="swiper-slide"
+                    src="assets/img/project/l6.png"
                     alt="img 3"
                   />
                 </div>
