--- a/index.html
+++ b/index.html
@@ -203,7 +203,11 @@
             through Code
           </h2>
           <div class="project-set">
-            <a href="#" class="project-item" data-aos="fade-right">
+            <a
+              href="https://github.com/dirgafebriyanda/Sistem-Informasi-Manajemen"
+              class="project-item"
+              data-aos="fade-right"
+            >
               <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
                   <img
@@ -229,7 +233,11 @@
                 </div>
               </div>
             </a>
-            <a href="#" class="project-item" data-aos="fade-left">
+            <a
+              href="https://github.com/dirgafebriyanda/E-Commerce"
+              class="project-item"
+              data-aos="fade-left"
+            >
               <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
                   <img
@@ -265,7 +273,11 @@
                 </div>
               </div>
             </a>
-            <a href="#" class="project-item" data-aos="fade-right">
+            <a
+              href="https://github.com/dirgafebriyanda/E-Vote"
+              class="project-item"
+              data-aos="fade-right"
+            >
               <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
                   <img
@@ -291,7 +303,11 @@
                 </div>
               </div>
             </a>
-            <a href="#" class="project-item" data-aos="fade-left">
+            <a
+              href="https://github.com/dirgafebriyanda/webistekita"
+              class="project-item"
+              data-aos="fade-left"
+            >
               <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
                   <img
